--- a/index.html
+++ b/index.html
@@ -8,50 +8,30 @@
       font-family: Arial, sans-serif;
       text-align: center;
       background: #ffe6eb;
+      padding-top: 50px;
       padding-top: 150px;
     }
 
     img {
+      width: 300px;
       width: 600px;
       border-radius: 12px;
       margin-bottom: 20px;
     }
-
-    h1 {
-      color: #d6336c;
-    }
-
+@@ -24,7 +24,7 @@
     .buttons {
       margin-top: 30px;
       position: relative;
+      height: 200px;
       height: 600px;
     }
 
     button {
-      padding: 12px 24px;
-      font-size: 18px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    #yes {
-      background-color: #ff4d6d;
-      color: white;
-    }
-
-    #no {
-      background-color: #adb5bd;
-      position: absolute;
-      left: 0px;
-      top: 0px;
-      will-change: transform;
-    }
-  </style>
-</head>
+@@ -49,30 +49,56 @@
 <body>
 
   <img src="your-photo.jpg" alt="Us together" />
+  <h1>Will you be my Valentine? 💖</h1>
   <h1> Savithaa will you be my Valentine? 💖</h1>
 
   <div class="buttons">
@@ -60,121 +40,52 @@
   </div>
 
   <script>
+    const noButton = document.getElementById("no");
   const noButton = document.getElementById("no");
   const buttonsBox = document.querySelector(".buttons");
 
-  // Current position (px) and target position (px)
-  let pos = { x: 220, y: 60 };
-  let target = { x: 220, y: 60 };
-
-  // Cursor/finger position relative to the buttons box
-  let pointer = { x: null, y: null };
-
-  // How close before it runs away (bigger = more sensitive)
-  const dangerRadius = 90;
-
-  // How fast it "runs" (0.08–0.2 feels nice)
-  const runSpeed = 0.12;
-
-  function clamp(v, min, max) {
-    return Math.max(min, Math.min(max, v));
-  }
-
-  function getBoxMetrics() {
+    noButton.addEventListener("mouseover", () => {
+      const x = Math.random() * 300 - 150;
+      const y = Math.random() * 150 - 75;
+  function moveNoButton() {
+    // Keep the button within the buttons area so it doesn't fly off-screen
     const boxRect = buttonsBox.getBoundingClientRect();
     const btnRect = noButton.getBoundingClientRect();
-    return {
-      boxRect,
-      maxX: boxRect.width - btnRect.width,
-      maxY: boxRect.height - btnRect.height
-    };
-  }
 
-  function setPointerFromClient(clientX, clientY) {
-    const { boxRect } = getBoxMetrics();
-    pointer.x = clientX - boxRect.left;
-    pointer.y = clientY - boxRect.top;
-  }
+      noButton.style.transform = `translate(${x}px, ${y}px)`;
+    });
+    const maxX = boxRect.width - btnRect.width;
+    const maxY = boxRect.height - btnRect.height;
 
-  function distance(ax, ay, bx, by) {
-    const dx = ax - bx;
-    const dy = ay - by;
-    return Math.hypot(dx, dy);
-  }
-
-  function pickNewTargetAwayFromPointer() {
-    const { maxX, maxY } = getBoxMetrics();
-
-    // If we don't have a pointer yet, do nothing
-    if (pointer.x === null || pointer.y === null) return;
-
-    // Vector from pointer -> button
-    const dx = pos.x - pointer.x;
-    const dy = pos.y - pointer.y;
-    const len = Math.hypot(dx, dy) || 1;
-
-    // Step away in that direction (+ a little randomness)
-    const step = 140 + Math.random() * 120; // how far it tries to flee
-    const jitterX = (Math.random() - 0.5) * 60;
-    const jitterY = (Math.random() - 0.5) * 60;
-
-    let newX = pos.x + (dx / len) * step + jitterX;
-    let newY = pos.y + (dy / len) * step + jitterY;
-
-    // Keep it inside the box
-    newX = clamp(newX, 0, maxX);
-    newY = clamp(newY, 0, maxY);
-
-    target.x = newX;
-    target.y = newY;
-  }
-
-  function animate() {
-    // If pointer is close, choose a target away from it
-    if (pointer.x !== null && pointer.y !== null) {
-      const d = distance(pos.x, pos.y, pointer.x, pointer.y);
-      const now = Date.now();
-
-      // Only pick a new target occasionally (prevents "teleporty" jitter)
-      if (d < dangerRadius && (now - lastMoveTime) > moveCooldownMs) {
-        pickNewTargetAwayFromPointer();
-        lastMoveTime = now;
-      }
+    function yesClicked() {
+      document.body.innerHTML = `
+        <h1>💘 I knew you'd choose yes 💘</h1>
+        <p>You’re stuck with me now 😌</p>
+      `;
     }
+  </script>
+    const x = Math.random() * maxX;
+    const y = Math.random() * maxY;
 
-    // Ease current position toward target (smooth running)
-    pos.x += (target.x - pos.x) * runSpeed;
-    pos.y += (target.y - pos.y) * runSpeed;
-
-    // Apply movement smoothly
-    noButton.style.transform = `translate(${pos.x}px, ${pos.y}px)`;
-
-    requestAnimationFrame(animate);
+    noButton.style.left = `${x}px`;
+    noButton.style.top = `${y}px`;
+    noButton.style.transform = "none"; // we're using left/top now
   }
 
-  // Desktop: track mouse over the button area
-  buttonsBox.addEventListener("mousemove", (e) => {
-    setPointerFromClient(e.clientX, e.clientY);
-  });
+  // Desktop: when mouse goes over the button, move it
+  noButton.addEventListener("mouseover", moveNoButton);
 
-  // Mobile: track finger movement over the button area
-  buttonsBox.addEventListener("touchmove", (e) => {
-    const t = e.touches[0];
-    setPointerFromClient(t.clientX, t.clientY);
-  }, { passive: true });
-
-  // Mobile: if they try to tap "No", force it to flee immediately
+  // Mobile: when user tries to tap the button, move it away
   noButton.addEventListener("touchstart", (e) => {
-    e.preventDefault();
-    const t = e.touches[0];
-    setPointerFromClient(t.clientX, t.clientY);
-    pickNewTargetAwayFromPointer();
+    e.preventDefault(); // prevents the tap from "clicking" the button
+    moveNoButton();
   }, { passive: false });
 
-  // Start animation loop
-  // NOTE: Because we use transform translate, we keep left/top as a "base"
-  // and move within the box using translate.
-  animate();
+  // Mobile: if their finger moves near/over it, keep dodging
+  noButton.addEventListener("touchmove", (e) => {
+    e.preventDefault();
+    moveNoButton();
+  }, { passive: false });
 
   function yesClicked() {
     document.body.innerHTML = `
@@ -185,7 +96,9 @@
 </script>
 
 </body>
+</html>
 
 </html>
+
 
 
