--- a/index.html
+++ b/index.html
@@ -3,36 +3,63 @@
 <head>
   <meta charset="UTF-8" />
   <title>Valentine?</title>
+
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
       background: #ffe6eb;
-      padding-top: 50px;
-      padding-top: 150px;
+      padding-top: 120px;
     }
 
+    /* All images use the same styling */
     img {
       width: 300px;
-      width: 600px;
       border-radius: 12px;
       margin-bottom: 20px;
     }
-@@ -24,7 +24,7 @@
+
+    h1 {
+      color: #d6336c;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 18px;
+    }
+
     .buttons {
       margin-top: 30px;
       position: relative;
       height: 200px;
-      height: 600px;
     }
 
     button {
-@@ -49,30 +49,56 @@
+      padding: 12px 24px;
+      font-size: 18px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    #yes {
+      background-color: #ff4d6d;
+      color: white;
+    }
+
+    #no {
+      background-color: #adb5bd;
+      position: absolute;
+    }
+  </style>
+</head>
+
 <body>
 
-  <img src="your-photo.jpg" alt="Us together" />
-  <h1>Will you be my Valentine? 💖</h1>
-  <h1> Savithaa will you be my Valentine? 💖</h1>
+  <!-- FIRST PAGE IMAGE -->
+  <img src="your-photo1.jpg" alt="First page photo" />
+
+  <h1>Savithaa, will you be my Valentine? 💖</h1>
 
   <div class="buttons">
     <button id="yes" onclick="yesClicked()">Yes</button>
@@ -41,64 +68,24 @@
 
   <script>
     const noButton = document.getElementById("no");
-  const noButton = document.getElementById("no");
-  const buttonsBox = document.querySelector(".buttons");
 
+    // Teleporting runaway effect (simple + reliable)
     noButton.addEventListener("mouseover", () => {
       const x = Math.random() * 300 - 150;
       const y = Math.random() * 150 - 75;
-  function moveNoButton() {
-    // Keep the button within the buttons area so it doesn't fly off-screen
-    const boxRect = buttonsBox.getBoundingClientRect();
-    const btnRect = noButton.getBoundingClientRect();
 
       noButton.style.transform = `translate(${x}px, ${y}px)`;
     });
-    const maxX = boxRect.width - btnRect.width;
-    const maxY = boxRect.height - btnRect.height;
 
     function yesClicked() {
+      // SECOND PAGE CONTENT
       document.body.innerHTML = `
-        <h1>💘 I knew you'd choose yes 💘</h1>
-        <p>You’re stuck with me now 😌</p>
+        <img src="your-photo.jpg" alt="Second page photo" />
+        <h1>💘 Somehow I knew you'd choose yes 💘</h1>
+        <p>You couldn't resist all this cake, could you 😌?</p>
       `;
     }
   </script>
-    const x = Math.random() * maxX;
-    const y = Math.random() * maxY;
-
-    noButton.style.left = `${x}px`;
-    noButton.style.top = `${y}px`;
-    noButton.style.transform = "none"; // we're using left/top now
-  }
-
-  // Desktop: when mouse goes over the button, move it
-  noButton.addEventListener("mouseover", moveNoButton);
-
-  // Mobile: when user tries to tap the button, move it away
-  noButton.addEventListener("touchstart", (e) => {
-    e.preventDefault(); // prevents the tap from "clicking" the button
-    moveNoButton();
-  }, { passive: false });
-
-  // Mobile: if their finger moves near/over it, keep dodging
-  noButton.addEventListener("touchmove", (e) => {
-    e.preventDefault();
-    moveNoButton();
-  }, { passive: false });
-
-  function yesClicked() {
-    document.body.innerHTML = `
-      <h1>💘 I knew you'd choose yes 💘</h1>
-      <p>You’re stuck with me now 😌</p>
-    `;
-  }
-</script>
 
 </body>
 </html>
-
-</html>
-
-
-
