--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     /* All images use the same styling */
     img {
-      width: 300px;
+      width: 900px;
       border-radius: 12px;
       margin-bottom: 20px;
     }
@@ -45,6 +45,7 @@
     #yes {
       background-color: #ff4d6d;
       color: white;
+      margin-right: 20px; /* 👈 adds space */
     }
 
     #no {
@@ -89,3 +90,4 @@
 
 </body>
 </html>
+
